@@ -36,7 +36,8 @@ See also \helpref{window styles overview}{windowstyles}.
 \twocolwidtha{7cm}
 \begin{twocollist}\itemsep=0pt
 \twocolitem{{\bf EVT\_COMBOBOX(id, func)}}{Process a wxEVT\_COMMAND\_COMBOBOX\_SELECTED event,
-when an item on the list is selected.}
+when an item on the list is selected. Note that calling 
+\helpref{GetValue}{wxcomboboxgetvalue} returns the new value of selection.}
 \twocolitem{{\bf EVT\_TEXT(id, func)}}{Process a wxEVT\_COMMAND\_TEXT\_UPDATED event,
 when the combobox text changes.}
 \end{twocollist}
